force-app/main/default/objects/PAF_Corp_Air__c/PAF_Corp_Air__c.object-meta.xml
<CustomObject>
    <label>PAF Corp AIR</label>
    <nameField>
        <displayFormat>air-{00000}</displayFormat>
        <label>PAF Corp Air Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Corp AIR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>