force-app/main/default/objects/PAF_Corp_Air__c/fields/AIR__c.field-meta.xml
<CustomField>
    <fullName>AIR__c</fullName>
    <label>PAF Corp Travel (AIR)</label>
    <referenceTo>PAF_Corp_Travel_Bookings__c</referenceTo>
    <relationshipLabel>PAF Corp AIR</relationshipLabel>
    <relationshipName>PAF_Corp_AIR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>