force-app/main/default/objects/PAF_Corp_Air__c/fields/AIR_SUMMARY__c.field-meta.xml
<CustomField>
    <fullName>AIR_SUMMARY__c</fullName>
    <formula>&quot;Booking Date &quot;+ TEXT(Date_of_Booking__c)+ &quot;. &quot;&amp; BR()&amp;
&quot;Departure Date - &quot;+TEXT(Date_of_Travel__c)+&quot;. &quot;&amp; BR()&amp;
&quot;Route - &quot;  &amp;  Departure_City__c  +&quot; - &quot;&amp; Arrival_City__c+&quot;. &quot;&amp; BR()&amp;
&quot;Class of service - &quot; + Class_of_Service__c+&quot; &quot;&amp; BR()&amp;  
&quot;Airline - &quot; + Airline__c+&quot; Flight#&quot;+  Flight_Number__c+&quot;.&quot;&amp; BR()&amp; 
&quot;PNR - &quot;+ PNR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AIR SUMMARY</label>
    <type>Text</type>
</CustomField>