force-app/main/default/objects/PAF_Corp_Air__c/fields/Air_Tickets_Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Air_Tickets_Form_of_Payment__c</fullName>
    <label>Air Tickets Form of Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>