force-app/main/default/objects/PAF_Corp_Air__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <length>20</length>
    <type>Text</type>
</CustomField>