force-app/main/default/objects/PAF_Corp_Air__c/fields/Airline_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Airline_Booking_Number__c</fullName>
    <label>Airline Booking Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>