force-app/main/default/objects/PAF_Corp_Air__c/fields/Airline_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Airline_Taxes__c</fullName>
    <label>Airline Taxes</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>