force-app/main/default/objects/PAF_Corp_Air__c/fields/Airline_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Airline_Ticket_Number__c</fullName>
    <label>Airline Ticket Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>