force-app/main/default/objects/PAF_Corp_Air__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>