force-app/main/default/objects/PAF_Corp_Air__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <label>Class of Service</label>
    <length>15</length>
    <type>Text</type>
</CustomField>