force-app/main/default/objects/PAF_Corp_Air__c/fields/New_PNR__c.field-meta.xml
<CustomField>
    <fullName>New_PNR__c</fullName>
    <label>New PNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>