force-app/main/default/objects/PAF_Corp_Air__c/fields/Product_Partner__c.field-meta.xml
<CustomField>
    <fullName>Product_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Product Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PAF Corp AIR</relationshipLabel>
    <relationshipName>PAF_Corp_AIR</relationshipName>
    <type>Lookup</type>
</CustomField>