force-app/main/default/objects/PAF_Corp_Air__c/fields/Sell__c.field-meta.xml
<CustomField>
    <fullName>Sell__c</fullName>
    <label>Sell</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>