force-app/main/default/objects/PAF_Corp_Air__c/fields/Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Used_Date__c</fullName>
    <label>Used Date</label>
    <type>Date</type>
</CustomField>